// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toggles entry state 1`] = `
[
  {
    "item": {
      "path": "test",
      "type": "folder",
    },
    "state": {},
  },
  {
    "item": {
      "content": "",
      "path": "test/App.js",
      "type": "file",
    },
    "state": {
      "isFocused": true,
      "isOpen": true,
      "isSelected": true,
    },
  },
  {
    "item": {
      "path": "components",
      "type": "folder",
    },
    "state": {
      "isExpanded": true,
      "isSelected": false,
    },
  },
  {
    "item": {
      "content": "",
      "path": "components/App.js",
      "type": "file",
    },
    "state": {
      "isFocused": false,
      "isOpen": true,
      "isSelected": false,
    },
  },
  {
    "item": {
      "path": "static",
      "type": "folder",
    },
    "state": {},
  },
  {
    "item": {
      "content": "",
      "path": "static/file.png",
      "type": "file",
    },
    "state": {
      "isFocused": false,
      "isOpen": true,
    },
  },
]
`;

exports[`toggles entry state 2`] = `
[
  {
    "item": {
      "path": "test",
      "type": "folder",
    },
    "state": {},
  },
  {
    "item": {
      "content": "",
      "path": "test/App.js",
      "type": "file",
    },
    "state": {},
  },
  {
    "item": {
      "path": "components",
      "type": "folder",
    },
    "state": {
      "isExpanded": false,
      "isSelected": true,
    },
  },
  {
    "item": {
      "content": "",
      "path": "components/App.js",
      "type": "file",
    },
    "state": {
      "isFocused": true,
      "isOpen": true,
      "isSelected": false,
    },
  },
  {
    "item": {
      "path": "static",
      "type": "folder",
    },
    "state": {},
  },
  {
    "item": {
      "content": "",
      "path": "static/file.png",
      "type": "file",
    },
    "state": {
      "isFocused": false,
      "isOpen": true,
    },
  },
]
`;

exports[`toggles entry state 3`] = `
[
  {
    "item": {
      "path": "test",
      "type": "folder",
    },
    "state": {},
  },
  {
    "item": {
      "content": "",
      "path": "test/App.js",
      "type": "file",
    },
    "state": {},
  },
  {
    "item": {
      "path": "components",
      "type": "folder",
    },
    "state": {
      "isExpanded": true,
      "isSelected": false,
    },
  },
  {
    "item": {
      "content": "",
      "path": "components/App.js",
      "type": "file",
    },
    "state": {
      "isFocused": false,
      "isOpen": true,
      "isSelected": false,
    },
  },
  {
    "item": {
      "path": "static",
      "type": "folder",
    },
    "state": {},
  },
  {
    "item": {
      "content": "",
      "path": "static/file.png",
      "type": "file",
    },
    "state": {
      "isFocused": true,
      "isOpen": true,
      "isSelected": true,
    },
  },
]
`;
